--- a/NuGet/Facebook.Yoga.nuspec
+++ b/NuGet/Facebook.Yoga.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Facebook.Yoga</id>
-    <version>1.0.0-pre</version>
+    <version>$version$</version>
     <title>Facebook.Yoga</title>
     <authors>Facebook</authors>
     <owners>Facebook</owners>
@@ -21,26 +21,26 @@
     <file src="Facebook.Yoga.targets" target="build\netstandard"/>
 
     <!-- lib -->
-    <file src="..\Windows\Facebook.Yoga\bin\Release\Facebook.Yoga.dll" target="lib\netstandard"/>
+    <file src="..\csharp\Windows\Facebook.Yoga\bin\Release\Facebook.Yoga.dll" target="lib\netstandard"/>
 
     <!-- runtimes -->
-    <file src="..\Windows\Facebook.Yoga\bin\x86\Release\Facebook.Yoga.dll" target="runtimes\win-x86\lib\netstandard"/>
-    <file src="..\Windows\Facebook.Yoga\bin\x86\Release\Facebook.Yoga.pdb" target="runtimes\win-x86\lib\netstandard"/>
+    <file src="..\csharp\Windows\Facebook.Yoga\bin\x86\Release\Facebook.Yoga.dll" target="runtimes\win-x86\lib\netstandard"/>
+    <file src="..\csharp\Windows\Facebook.Yoga\bin\x86\Release\Facebook.Yoga.pdb" target="runtimes\win-x86\lib\netstandard"/>
     
-    <file src="..\Windows\Facebook.Yoga\bin\x64\Release\Facebook.Yoga.dll" target="runtimes\win-x64\lib\netstandard"/>
-    <file src="..\Windows\Facebook.Yoga\bin\x64\Release\Facebook.Yoga.pdb" target="runtimes\win-x64\lib\netstandard"/>
+    <file src="..\csharp\Windows\Facebook.Yoga\bin\x64\Release\Facebook.Yoga.dll" target="runtimes\win-x64\lib\netstandard"/>
+    <file src="..\csharp\Windows\Facebook.Yoga\bin\x64\Release\Facebook.Yoga.pdb" target="runtimes\win-x64\lib\netstandard"/>
     
-    <file src="..\Windows\Facebook.Yoga\bin\ARM\Release\Facebook.Yoga.dll" target="runtimes\win8-arm\lib\netstandard"/>
-    <file src="..\Windows\Facebook.Yoga\bin\ARM\Release\Facebook.Yoga.pdb" target="runtimes\win8-arm\lib\netstandard"/>    
+    <file src="..\csharp\Windows\Facebook.Yoga\bin\ARM\Release\Facebook.Yoga.dll" target="runtimes\win8-arm\lib\netstandard"/>
+    <file src="..\csharp\Windows\Facebook.Yoga\bin\ARM\Release\Facebook.Yoga.pdb" target="runtimes\win8-arm\lib\netstandard"/>    
 
     <!-- Native -->
-    <file src="..\Yoga\bin\x86\Release\Yoga.dll" target="runtimes\win-x86\native"/>
-    <file src="..\Yoga\bin\x86\Release\Yoga.pdb" target="runtimes\win-x86\native"/>
+    <file src="..\csharp\Yoga\bin\x86\Release\Yoga.dll" target="runtimes\win-x86\native"/>
+    <file src="..\csharp\Yoga\bin\x86\Release\Yoga.pdb" target="runtimes\win-x86\native"/>
     
-    <file src="..\Yoga\bin\x64\Release\Yoga.dll" target="runtimes\win-x64\native"/>
-    <file src="..\Yoga\bin\x64\Release\Yoga.pdb" target="runtimes\win-x64\native"/>
+    <file src="..\csharp\Yoga\bin\x64\Release\Yoga.dll" target="runtimes\win-x64\native"/>
+    <file src="..\csharp\Yoga\bin\x64\Release\Yoga.pdb" target="runtimes\win-x64\native"/>
 
-    <file src="..\Yoga\bin\ARM\Release\Yoga.dll" target="runtimes\win8-arm\native"/>
-    <file src="..\Yoga\bin\ARM\Release\Yoga.pdb" target="runtimes\win8-arm\native"/>
+    <file src="..\csharp\Yoga\bin\ARM\Release\Yoga.dll" target="runtimes\win8-arm\native"/>
+    <file src="..\csharp\Yoga\bin\ARM\Release\Yoga.pdb" target="runtimes\win8-arm\native"/>
   </files>
 </package>
